--- a/FrontEnd/src/pages/Try/Try.css
+++ b/FrontEnd/src/pages/Try/Try.css
@@ -58,6 +58,11 @@
     width: 100%;
     height: auto;
   }
+
+  .heading{
+    text-shadow: 50px 50px 50px black;
+    /* text-shadow:30cqmax; */
+  }
   
   /* New styles for text-container */
   .text-container {
@@ -66,7 +71,7 @@
     left: 50%;
     width: 40vw;
     transform: translate(-50%, -50%);
-    text-shadow: 0px 0px 50px rgb(4, 0, 0); /* x-offset, y-offset, blur radius, shadow color */
+    text-shadow: 0px 0px 50px rgb(4, 0, 0); 
     color: white;
     text-align: center; 
     z-index: 5; 
@@ -80,20 +85,20 @@
       overflow: hidden; /* Hide overflow to prevent scrollbars from the animation */
     }
     
-    .stars1 {
-        position: absolute;
-        top: 0;
+    /* .stars1 {
+        position: absolute; */
+        /* top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        z-index: 1; /* Stars will be in the background */
+        z-index: 1; 
     }
     
     .stars1 img {
         width: 100%;
         height: 100%;
         object-fit: cover;
-    }
+    } */
     
     /* Animation for clouds */
     @keyframes moveClouds {
